crates/reinhardt-pages/tests/ui/client_form/fail/server_fn_submit_skip_serializing_if.stderr
error: ClientForm server_fn fields must not use serde(skip), serde(skip_serializing), serde(skip_serializing_if), or serde(skip_deserializing)
  --> tests/ui/client_form/fail/server_fn_submit_skip_serializing_if.rs:10:2
   |
10 |     name: String,
   |     ^^^^
